Add queryDSL to custom repository in order to sort stop orders.