@@ -11,6 +11,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 public class ScheduleController {
@@ -34,7 +35,7 @@ public class ScheduleController {
         List<Schedule> schedules = scheduleService.getListSchedule();
         List<ScheduleListDto> scheduleListDto = schedules.stream().map(
             element -> modelMapper.map(element, ScheduleListDto.class)
-        ).toList();
+        ).collect(Collectors.toList());
         return ApiResponse.success(scheduleListDto);
     }
 
